--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,14 @@
       href="https://fonts.googleapis.com/css2?family=Michroma&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;1,400;1,700&display=swap"
+      rel="stylesheet"
+    /> -->
   </head>
   <body>
     <noscript>
