--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;1,400;1,700&display=swap"
       rel="stylesheet"
     />
+    <script src="https://apis.google.com/js/platform.js"></script>
   </head>
   <body>
     <noscript>
